# XposedInline

./: README.en.md  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/artxposedcpphook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/cpp/Dobby/: CMakeLists.txt
app/src/main/cpp/Substrate/: CMakeLists.txt
app/src/main/cpp/Substrate/src/: And64InlineHook.cpp  SubstrateHook.cpp
app/src/main/cpp/dlfc/: dlfcn_nougat.cpp  dlfcn_nougat.h  log.h
app/src/main/cpp/utils/: Log.h  hide.cpp  logging.h  parse.cpp  parse.h
app/src/main/java/com/example/artxposedcpphook/: CppHookMain.java  Main.java  MainActivity.java  Utils.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/artxposedcpphook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
